[package]
name = "web-radio"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
rand = "0.9.0"
rocket = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = [ "v4" ] }
yaml-rust2 = "0.10.0"
mlua = { version = "0.10", features = ["lua51", "vendored", "send"] }
tokio = "1.44.2"
